@@ -73,6 +73,7 @@ and ideas to make this software available.
 	Adrian Chadd <adrian@creative.net.au>
 	Robert Collins <robert.collins@itdomain.com.au>
 	Brian Degenhardt <bmd@mp3.com>
+	Evan Jones <ejones@netwinder.org>
 
 Development of this caching software is funded by the National Science
 Foundation (grants NCR-9616602 and NCR-9521745).  Paid staff members on
