@@ -588,6 +588,17 @@ AC_ARG_ENABLE(ipf-transparent,
   fi
 ])
 
+dnl Enable Linux Netfilter (2.4) Transparent Proxy
+AC_ARG_ENABLE(linux-netfilter,
+[  --enable-linux-netfilter
+                          Enable Transparent Proxy support for Linux 2.4.],
+[ if test "$enableval" = "yes" ; then
+	echo "Linux-Netfilter Transparent Proxy enabled"
+	AC_DEFINE(LINUX_NETFILTER)
+	LINUX_NETFILTER="yes"
+  fi
+])
+
 dnl Enable Leak Finding Functions
 AC_ARG_ENABLE(leakfinder,
 [  --enable-leakfinder
@@ -808,6 +819,7 @@ AC_CHECK_HEADERS( \
 	ip_nat.h \
 	libc.h \
 	limits.h \
+	linux/netfilter_ipv4.h \
 	malloc.h \
 	math.h \
 	memory.h \
@@ -1265,6 +1277,26 @@ fi
 if test "$IPF_TRANSPARENT" = "no" ; then
     echo "WARNING: Cannot find necessary IP-Filter header files"
     echo "         Transparent Proxy support WILL NOT be enabled"
+    sleep 10
+fi
+
+dnl Linux-Netfilter support requires Linux 2.4 kernel header files.
+dnl Shamelessly copied from above
+if test "$LINUX_NETFILTER" ; then
+    AC_MSG_CHECKING(if Linux 2.4 kernel header files are installed)
+    # hold on to your hats...
+    if test "$ac_cv_header_linux_netfilter_ipv4_h" = "yes"; then
+        LINUX_NETFILTER="yes"
+        AC_DEFINE(LINUX_NETFILTER, 1)
+    else
+        LINUX_NETFILTER="no"
+        AC_DEFINE(LINUX_NETFILTER, 0)
+    fi
+    AC_MSG_RESULT($LINUX_NETFILTER)
+fi 
+if test "$LINUX_NETFILTER" = "no" ; then
+    echo "WARNING: Cannot find necessary Linux 2.4 kernel header files"
+    echo "         Linux 2.4 Transparent Proxy support WILL NOT be enabled"
     sleep 10
 fi
 
